--- a/client/src/app/components/tag-manager/tag-manager.component.html
+++ b/client/src/app/components/tag-manager/tag-manager.component.html
@@ -10,13 +10,13 @@
         name="tabs"
         class="block w-full focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md"
       >
-        <option selected>My Account</option>
+        <option selected>Crear etiqueta</option>
 
-        <option>Company</option>
+        <option>Editar etiqueta</option>
 
-        <option>Team Members</option>
+        <option>Borrar etiqueta</option>
 
-        <option>Billing</option>
+        <option>Asignar etiqueta(s)</option>
       </select>
     </div>
     <div class="hidden sm:block">
@@ -29,7 +29,7 @@
           class="text-gray-900 rounded-l-lg group relative min-w-0 flex-1 overflow-hidden bg-white py-4 px-4 text-sm font-medium text-center hover:bg-gray-50 focus:z-10"
           aria-current="page"
         >
-          <span>My Account</span>
+          <span>Crear etiqueta</span>
           <span
             aria-hidden="true"
             class="bg-indigo-500 absolute inset-x-0 bottom-0 h-0.5"
@@ -39,7 +39,7 @@
         <a
           class="text-gray-500 hover:text-gray-700 group relative min-w-0 flex-1 overflow-hidden bg-white py-4 px-4 text-sm font-medium text-center hover:bg-gray-50 focus:z-10"
         >
-          <span>Company</span>
+          <span>Editar etiqueta</span>
           <span
             aria-hidden="true"
             class="bg-transparent absolute inset-x-0 bottom-0 h-0.5"
@@ -49,7 +49,7 @@
         <a
           class="text-gray-500 hover:text-gray-700 group relative min-w-0 flex-1 overflow-hidden bg-white py-4 px-4 text-sm font-medium text-center hover:bg-gray-50 focus:z-10"
         >
-          <span>Team Members</span>
+          <span>Borrar etiqueta</span>
           <span
             aria-hidden="true"
             class="bg-transparent absolute inset-x-0 bottom-0 h-0.5"
@@ -59,7 +59,7 @@
         <a
           class="text-gray-500 hover:text-gray-700 rounded-r-lg group relative min-w-0 flex-1 overflow-hidden bg-white py-4 px-4 text-sm font-medium text-center hover:bg-gray-50 focus:z-10"
         >
-          <span>Billing</span>
+          <span>Asignar etiqueta(s)</span>
           <span
             aria-hidden="true"
             class="bg-transparent absolute inset-x-0 bottom-0 h-0.5"
